@@ -50,7 +50,7 @@
 -->
       <ulink url="http://www.baum.de/">BAUM Retec AG</ulink> is guiding
  	    Gnopernicus development, and is also the principal author and
- 	    project maintainer.  BAUM has beendeveloping screen reading and
+ 	    project maintainer.  BAUM has been developing screen reading and
  	    magnification software, as well as other software and hardware
  	    products for the blind, for over 20 years.  The  company's current
  	    products include the POET reading machine, the Vario  40, Vario 80,
