@@ -152,5 +152,5 @@
     </itemizedlist>
   </para>
   <para>Another 16 languages are partially supported, with more than half of
-  their strings translate.</para>
+  their strings translated.</para>
 </sect1>
